--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="_7">7</string>
     <string name="_8">8</string>
     <string name="_9">9</string>
+    <string name="dot">.</string>
     <string name="divide">/</string>
     <string name="multiple">*</string>
     <string name="minus">-</string>
